--- a/HTML/MyPortfolio/sample/N-index.html
+++ b/HTML/MyPortfolio/sample/N-index.html
@@ -12,9 +12,18 @@
         <li><a href="#home">HOME</a></li>
         <li><a href="#about">PROFILE</a></li>
     </ul>
+    
 
     <div id="container">
-        <div id="home"><h1>HOME</h1></div>
+        <div id="home">
+            <div class="box1">
+                <img src="pic2.png" alt="keyta">
+            </div>
+            <div class="box2"></div>
+            <div class="box_D"></div>
+            <h2>T</h2>
+            
+        </div>
         <div id="about"><h1>PROFILE</h1></div>
     </div>
 
