--- a/HTML/MyPortfolio/sample/N-index.html
+++ b/HTML/MyPortfolio/sample/N-index.html
@@ -16,15 +16,38 @@
 
     <div id="container">
         <div id="home">
+            <div class="logo"><img src="logo.png" alt="GDT"></div>
             <div class="box1">
                 <img src="pic2.png" alt="keyta">
+                <h1>Keyta</h1>
+                <p>Gadiel Dave A. Tagam</p>
+                <div class="SocMed">
+                    <div class="fb">
+                        <a href="https://www.facebook.com/infjkeyta">
+                            <img src="Facebook-logo.png" alt="facebook">
+                        </a>
+                    </div>
+                    <div class="ins">
+                        <a href="https://www.instagram.com/infjkeyta/">
+                            <img src="Instagram-Logo.png" alt="instagram">
+                        </a>
+                    </div>
+                    <div class="twt">
+                        <a href="https://twitter.com/infjkeyta">
+                            <img src="Twitter-logo.svg.png" alt="twitter">
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="box2"></div>
             <div class="box_D"></div>
             <h2>T</h2>
             
+            
         </div>
-        <div id="about"><h1>PROFILE</h1></div>
+
+
+        <div id="about"></div>
     </div>
 
 </body>
