--- a/HTML/MyPortfolio/sample/N-index.html
+++ b/HTML/MyPortfolio/sample/N-index.html
@@ -37,7 +37,8 @@
                             <img src="Twitter-logo.svg.png" alt="twitter">
                         </a>
                     </div>
-                </div>
+                </div>   
+                <div class="email">Email Me: tagam.gadieldave@gmail.com</div>
             </div>
             <div class="box2"></div>
             <div class="box_D"></div>
