--- a/HTML/MyPortfolio/sample/N-index.html
+++ b/HTML/MyPortfolio/sample/N-index.html
@@ -46,7 +46,35 @@
         </div>
 
 
-        <div id="about"></div>
+        <div id="about">
+            <div class="box1_1">
+                <img src="pic3.png" alt="Keyta">
+            </div>
+            <div class="abtme_tt"><p>ABOUT ME</p></div>
+            <div class="abtme">
+                <p>
+                    I am an aspiring IT professional. 
+                    I have a degree in computer science and have been working in the field for a few years now. 
+                    I love learning new things and exploring new technologies. I am also passionate about helping 
+                    others learn about technology and how to use it to their advantage. In this article, I will 
+                    share with you some of my experiences and thoughts as an aspiring IT professional.    
+                </p>
+            </div>
+
+            <div class="abtlikes_tt"><p>MY LIKES</p></div>
+            <div class="abtlikes">
+                <p>
+                    Dancing, Singing, Extracurricular Activities
+                </p>
+            </div>
+
+            <div class="abtskills_tt"><p>MY SKILLS</p></div>
+            <div class="abtskills">
+                <p>
+                    Photo & Video Editing, PC debug
+                </p>
+            </div>
+        </div>
     </div>
 
 </body>
