--- a/HTML/MyPortfolio/sample/N-index.html
+++ b/HTML/MyPortfolio/sample/N-index.html
@@ -23,17 +23,17 @@
                 <p>Gadiel Dave A. Tagam</p>
                 <div class="SocMed">
                     <div class="fb">
-                        <a href="https://www.facebook.com/infjkeyta">
+                        <a href="https://www.facebook.com/infjkeyta" target="_blank"> 
                             <img src="Facebook-logo.png" alt="facebook">
                         </a>
                     </div>
                     <div class="ins">
-                        <a href="https://www.instagram.com/infjkeyta/">
+                        <a href="https://www.instagram.com/infjkeyta/" target="_blank">
                             <img src="Instagram-Logo.png" alt="instagram">
                         </a>
                     </div>
                     <div class="twt">
-                        <a href="https://twitter.com/infjkeyta">
+                        <a href="https://twitter.com/infjkeyta" target="_blank">
                             <img src="Twitter-logo.svg.png" alt="twitter">
                         </a>
                     </div>
